2021-08-03  Simon J Gerraty  <sjg@beast.crufty.net>

	* var.c: use long for :On if we don't have a 64bit int type 

	* VERSION (_MAKE_VERSION): 20210803
	Merge with NetBSD make, pick up
	o rework varmod-order tests to avoid qsort instability
	o make.1: clarify :On entry

2021-07-31  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20210731
	Merge with NetBSD make, pick up
	o fix some lint issues
	o more unit tests
	o var.c: rework of ApplyModifier_Order

2021-07-30  Simon J Gerraty  <sjg@beast.crufty.net>

	* util.c: add strto*l if HAVE_STRTO*L not defined

	* VERSION (_MAKE_VERSION): 20210730
	Merge with NetBSD make, pick up
	o var.c: add :On and :Orn for numeric sort
	  disabled if no 64bit type available.
	o _strtol.h: to implement strto*l functions

2021-07-04  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20210704
	Merge with NetBSD make, pick up
	o unit-tests: fix some tests to be more portable
	- job-output-null not all shells do the same number of write calls
	- objdir-writable if TMPDIR is set; /tmp may not be usable

2021-07-01  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20210701
	Merge with NetBSD make, pick up
	o unit-tests: allow for BROKEN_TESTS to list TESTS to be skipped;
	some tests just cannot work in some environments.
	o buf.c: simpler upper bound for length in Buf_AddInt
	o cond.c: fix grammar in error message for malformed conditional
	o for.c: prevent newline injection (from ${.newline}) in .for loops
	o var.c: use more practical data type in RegexReplace
	(avoid need for %zu)
	extract RegexReplace from ModifyWord_SubstRegex
	
2021-06-21  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20210621
	Merge with NetBSD make, pick up
	o var.c: only report error for unmatched regex subexpression
	when linting (-dL) since we cannot tell when an unmatched
	subexpression is an expected result.
	o move unmatched regex subexpression tests to