@@ -55,7 +55,7 @@
 #       Simon J. Gerraty <sjg@crufty.net>
 
 # RCSid:
-#	$Id: install-mk,v 1.196 2021/06/19 15:30:41 sjg Exp $
+#	$Id: install-mk,v 1.197 2021/08/10 21:37:23 sjg Exp $
 #
 #	@(#) Copyright (c) 1994 Simon J. Gerraty
 #
@@ -70,7 +70,7 @@
 #	sjg@crufty.net
 #
 
-MK_VERSION=20210616
+MK_VERSION=20210808
 OWNER=
 GROUP=
 MODE=444
