@@ -1,3 +1,9 @@
+2021-08-08  Simon J Gerraty  <sjg@beast.crufty.net>
+
+	* install-mk (MK_VERSION): 20210808
+
+	* options.mk: issue warning for WITH_*=no
+
 2021-06-16  Simon J Gerraty  <sjg@beast.crufty.net>
 
 	* install-mk (MK_VERSION): 20210616
